# beany-engine

./: .gitignore  CMakeLists.txt  Makefile  README.md
assets/shaders/: shader.wgsl  triangle.wgsl
include/: app.h  callbacks.h  helper.h  pipeline.h  renderer.h  resources.h  shaders.h  surface.h
src/: app.cpp  main.cpp
